<resources>
    <string name="app_name">Perminit-Frontend</string>
    <string name="title_activity_add_reminder">AddReminder</string>
    <string name="title_activity_todo_list">TodoList</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- minit info -->
    <string name="minit_1_name">Reginald</string>
    <string name="minit_2_name">Norman</string>
    <string name="minit_3_name">Sabrina</string>


    <!-- Stings for the add/edit activity screens-->
    <string name="pm_select">Choose your PerMinit</string>
    <string name="new_e_title">Create a New Reminder</string>
    <string name="edit_e_title">Edit Event</string>
    <string name="nlp_prompt">Or use natural language processing</string>
    <string name="dummy_event">e.g Submit Tax Form</string>
    <string name="dummy_nlp">Type in a new event...</string>
    <string name="add_minit_btn">Create a New Minit</string>
    <string name="recurring_check">Recurring Event</string>
    <string-array name="recurFrames">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Annually</item>
    </string-array>
    <string name="num_recur_times">Number of recurrences</string>

    <!-- String for TodoList screen  -->
    <string name="todolist_title">My To-Do List</string>
    <string name="add_event_btn">Add Event</string>
    <string name="calendar_btn">My Calendar</string>
    <string name="todo_btn">Todo List</string>
    <string name="quick_add">Type to quickly add a new event...</string>
    <string name="voice_btn">Voice-to-Text</string>
    <string name="todo_list">To-Do list</string>
    <string name="event_name">Event Name</string>
    <string name="event_time">Event Time</string>
    <string name="minit_msg">Minit Msg</string>
    <string name="minit">Minit</string>
    <string name="edit_btn">Edit event</string>

    <!-- String for Notifications  -->
    <string name="event_notification_channel_id" translatable="false">event_notification_channel</string>
    <string name="event_notification_channel_name" translatable="true">Event</string>
    <string name="event_notification_channel_description" translatable="true">Channel for sending events</string>
    <string name="notification_title">Upcoming Event</string>

    <!-- String for Calendar   -->
    <string name="calendar_title">My Calendar</string>
    <string name="event_time_days">1 d</string>
    <string name="event_loc">Event Location</string>


    <string name="nlp_help">e.g make event fishing on 12/22/2022 from 12:40 until 13:45</string>
</resources>