<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="377dp"
        android:layout_height="166dp">

        <!--ImageVIew to display our Course Image-->

        <!--Text View to display Course Name-->

        <!--Text VIew to display COurse Rating-->
        <!--Image used in present in drawable folder-->

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/EditEventButton"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/edit_btn"
            android:onClick="editEvent"
            app:fabCustomSize="40dp"
            app:backgroundTint="@color/blue_500"
            app:layout_constraintEnd_toEndOf="@+id/minitText"
            app:layout_constraintBottom_toTopOf="@+id/minitText"
            app:layout_constraintTop_toBottomOf="@id/eventName"
            app:rippleColor="@color/blue_200"
            app:srcCompat="@android:drawable/ic_menu_edit"
            tools:ignore="SpeakableTextPresentCheck" />

        <CheckBox
            android:id="@+id/eventCheck"
            android:layout_width="40dp"
            android:checked="false"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/eventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/event_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/eventCheck"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/eventTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:drawablePadding="2dp"
            android:text="@string/event_time"
            app:layout_constraintStart_toEndOf="@id/eventCheck"
            app:layout_constraintTop_toBottomOf="@id/eventName" />

        <TextView
            android:id="@+id/minitText"
            android:text="@string/minit_msg"
            android:layout_width="228dp"
            android:layout_height="58dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="90dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="39dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/minit"
            android:translationX="10dp"
            android:translationY="85dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>