<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalendarActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/submitNLP3"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:onClick="nlpSubmitTodo"
        android:src="@android:drawable/ic_menu_send"
        app:fabCustomSize="40dp"
        app:backgroundTint="@color/orange_700"
        app:layout_constraintBottom_toBottomOf="@+id/nlpAddTodo4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nlpAddTodo4"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/nlpAddTodo4"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="Type in a new event here"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/addEventButton3"
        app:layout_constraintEnd_toStartOf="@+id/submitNLP3"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/todoNlpHelper"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:clickable="true"
        android:onClick="todoNlpHelp"
        android:src="@android:drawable/ic_menu_help"
        app:backgroundTint="@color/gray"
        app:fabCustomSize="25dp"
        app:layout_constraintTop_toTopOf="@+id/nlpAddTodo4"
        app:layout_constraintStart_toEndOf="@+id/nlpAddTodo4" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/todoButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="false"
        android:onClick="toCalendar"
        android:contentDescription="@string/todo_btn"
        app:backgroundTint="@color/blue_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/blue_200"
        app:srcCompat="@android:drawable/ic_input_get"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/calendarButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:clickable="true"
        android:contentDescription="@string/calendar_btn"
        app:backgroundTint="@color/blue_500"
        app:layout_constraintBottom_toBottomOf="@+id/addEventButton3"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/blue_200"
        app:srcCompat="@android:drawable/ic_menu_my_calendar"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addEventButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/add_event_btn"
        android:onClick="addEvent"
        app:backgroundTint="@color/orange_700"
        app:layout_constraintBottom_toBottomOf="@+id/todoButton3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/orange_200"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:ignore="ImageContrastCheck" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="360dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarTitle" />

    <TextView
        android:id="@+id/calendarTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/calendar_title"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarMiniTodo"
        android:layout_width="358dp"
        android:layout_height="150dp"
        android:layout_marginTop="6dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView" />
</androidx.constraintlayout.widget.ConstraintLayout>