<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddReminder">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/numTimeRecur"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"

        android:hint="@string/num_recur_times"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinner"
        app:layout_constraintBottom_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/new_e_title"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Save"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/orange_700"
        android:clickable="true"
        android:onClick="onSubmit"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancel"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/blue_500"
        android:clickable="true"
        android:onClick="cancel"
        android:text="CANCEL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Save"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="409dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pageTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/NameField"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="Enter event name"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/chooseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="Choose your PerMinit!"

        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <ImageView
        android:id="@+id/pm_1_img"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/selectableItemBackground"
        android:onClick="select_1"
        android:src="@drawable/ic_minit1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pm_2_img"
        app:layout_constraintTop_toBottomOf="@+id/chooseText"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/pm_2_img"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:onClick="select_2"
        android:src="@drawable/ic_minit2"
        app:layout_constraintStart_toEndOf="@+id/pm_1_img"
        app:layout_constraintEnd_toStartOf="@+id/pm_3_img"
        app:layout_constraintTop_toBottomOf="@+id/chooseText"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/pm_3_img"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:onClick="select_3"
        android:src="@drawable/ic_minit3"
        app:layout_constraintStart_toEndOf="@+id/pm_2_img"
        app:layout_constraintEnd_toStartOf="@+id/addMinitButton"
        app:layout_constraintTop_toBottomOf="@id/chooseText"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addMinitButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        app:fabCustomSize="80dp"
        android:clickable="true"
        android:contentDescription="@string/add_minit_btn"
        android:onClick="select_4"
        app:backgroundTint="@color/blue_500"
        app:layout_constraintStart_toEndOf="@+id/pm_3_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chooseText"
        app:rippleColor="@color/orange_200"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/pm_1_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/minit_1_name"
        app:layout_constraintStart_toStartOf="@+id/pm_1_img"
        app:layout_constraintTop_toBottomOf="@+id/pm_1_img" />

    <TextView
        android:id="@+id/pm_2_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/minit_2_name"
        app:layout_constraintStart_toStartOf="@+id/pm_2_img"
        app:layout_constraintTop_toBottomOf="@+id/pm_2_img" />

    <TextView
        android:id="@+id/pm_3_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/minit_3_name"
        app:layout_constraintStart_toStartOf="@+id/pm_3_img"
        app:layout_constraintTop_toBottomOf="@+id/pm_3_img" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEndTime" />

    <EditText
        android:id="@+id/editTextEndTime"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextStartTime" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="Date (MM/DD/YYYY)"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/editTextDate"
        app:layout_constraintTop_toTopOf="@+id/editTextDate" />

    <TextView
        android:id="@+id/endtimelabel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="End Time (HH:MM)"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/editTextEndTime"
        app:layout_constraintTop_toTopOf="@+id/editTextEndTime" />

    <EditText
        android:id="@+id/editTextStartTime"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pm_1_name" />

    <TextView
        android:id="@+id/starttimelabel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="Start Time (HH:MM)"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/editTextStartTime"
        app:layout_constraintTop_toTopOf="@+id/editTextStartTime" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/descriptionbox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="Description"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="@+id/recurringCheck"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintBottom_toTopOf="@+id/nlpin" />

    <EditText
        android:id="@+id/nlpin"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="Type in a new event here"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/Save"
        app:layout_constraintEnd_toStartOf="@+id/submitnlp"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/submitnlp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:onClick="nlpSubmitTodo"
        android:src="@android:drawable/ic_menu_send"
        app:fabCustomSize="40dp"
        app:backgroundTint="@color/orange_700"
        app:layout_constraintBottom_toBottomOf="@+id/nlpin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nlpin"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/recurringCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/recurring_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="@+id/recurringCheck"
        app:layout_constraintTop_toBottomOf="@+id/recurringCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/nlphelper"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:clickable="true"
        android:onClick="nlpHelp"
        android:src="@android:drawable/ic_menu_help"
        app:backgroundTint="@color/gray"
        app:fabCustomSize="25dp"
        app:layout_constraintTop_toTopOf="@+id/nlpin"
        app:layout_constraintStart_toEndOf="@+id/nlpin" />

</androidx.constraintlayout.widget.ConstraintLayout>